# WhatQL

./: .gitignore  Cargo.toml  README.md  codecrafters.yml  download_sample_databases.sh
src/: helpers.rs  main.rs
src/classes/: cell.rs  database.rs  mod.rs  page.rs  parser.rs  record.rs
src/engine/: mod.rs
src/engine/btree/: mod.rs  node.rs  page_cache.rs  traversal.rs
src/engine/execution/: executor.rs  mod.rs  optimizer.rs  planner.rs
src/engine/storage/: binary.rs  mod.rs  page_manager.rs  varint.rs
src/parser/: ast.rs  lexer.rs  mod.rs  validator.rs
src/schema/: column.rs  direct.rs  index.rs  mod.rs  table.rs
src/utils/: logger.rs  metrices.rs  mod.rs  sqlite_parocessor.rs
test/: create_test_db.sql  test_whatql.sh
