[package]
name = "codecrafters-sqlite"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"


[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
hex = "0.4.3"                                    # utility
sqlparser = "0.54.0"                             # SQL parsing
rusqlite = { version = "0.28.0", features = ["bundled"] }

# New dependencies for API server
actix-web = "4.4.0"                              # Web server framework
serde = { version = "1.0.179", features = ["derive"] } # Serialization
serde_json = "1.0.104"                           # JSON support
tokio = { version = "1.29.1", features = ["full"] } # Async runtime